2005-07-30  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm (calculate): Fix missing DateTime check in
	the "calculate" method.

2005-07-08  Brad Cavanagh  <b.cavanagh@jach.hawaii.edu>

	* lib/Astro/Coords.pm: Factor out RA/Dec lookup when calculating
	distance to reduce number of calls to radec() by 50%.
	
2005-05-20  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords.pm: Pre-create a DateTime::TimeZone object
	rather than using a 'UTC' string. This improves performance when
	using many calls to the datetime method.

2005-04-06  Tim Jenness  <timj@jach.hawaii.edu>

	* lib/Astro/Coords/Elements.pm (apparent): Include the target name
	in the error message when failing to determine the apparent RA/Dec.

2005-03-16  Tim Jenness  <timj@jach.hawaii.edu>

	* t/basic.t: Test the array Elements constructor

	* lib/Astro/Coords.pm (new): Document upgrade to elements
	interface to accept array() and enhance the test for that case.

	* lib/Astro/Coords/Elements.pm (new): Now allow the return value
	from the array() method to be provided to the constructor.
	
	* lib/Astro/Coords/Elements.pm (array): For comets, now return the
	epoch of perihelion as the final member of the array and the epoch
	of elements as the initial element in the array. This allows both
	epochs to be retained without confusion (since the penultimate
	member will be undefined for the cometary case) but constitutes a
	change in the published interface.
	
	* lib/Astro/Coords/Elements.pm (apparent): Include the target name
	in the error message when failing to perturb the elements.

2005-02-21  Tim Jenness  <tjenness@cpan.org>

	---- RELEASE V0.10 to CPAN ----

2005-02-18  Tim Jenness  <tjenness@cpan.org>

	* lib/Astro/Coords.pm: Rewrite the rise/set iterative code to
	handle all cases properly. Add new parameter "event" to control
	whether the nearest, previous or next rise/set time should be
	returned.

2005-02-16  Tim Jenness  <tjenness@cpan.org>
